Aprendi colocar pra direita o texto
AERRRR

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="elemento"></div>
 
     <div class="example">
-    <h1 id="PIB">Oque é PIB</h1>
+    <h1>Oque é PIB</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam consectetur fuga odit quae commodi ex, sunt doloribus saepe ipsum officiis aperiam deserunt tempore, voluptatum earum? Exercitationem distinctio molestias asperiores est.</p>
    </div>
 </body>
